--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.27.2",
         "bootstrap": "^5.2.0",
         "react": "^18.2.0",
+        "react-axios": "^2.0.6",
         "react-bootstrap": "^2.5.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.3.0",
