--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "react": "^18.2.0",
         "react-axios": "^2.0.6",
         "react-bootstrap": "^2.5.0",
+        "react-bootstrap-icons": "^1.8.4",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.4.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "sass": "^1.54.3",
