--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-scripts": "5.0.1",
         "sass": "^1.54.3",
         "styled-components": "^5.3.5",
+        "universal-cookie": "^4.0.4",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
