--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.27.2",
         "bootstrap": "^5.2.0",
+        "js-cookie": "^3.0.1",
         "react": "^18.2.0",
         "react-axios": "^2.0.6",
         "react-bootstrap": "^2.5.0",
